--- a/styles/ztmy.css
+++ b/styles/ztmy.css
@@ -1,3 +1,3 @@
-.__ZTMY__, div, h1, h2, h3, h4, h5, h6, ul, li, p, a, span, strong, small, em, textarea, button, select, option, input, label, yt-formatted-string {
+.__ZTMY__, * {
   font-family: 'ZTMY', 'pixelmplus12regular' !important;
 }
